<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.fragments.loginFragments.registerFrg.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            style="@style/textViewsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            android:text="@string/create_new_account"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/userNameET_register"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_user"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/emailET_register"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_bg_design"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/birthDateIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/birthDateTV_register"
                style="@style/textViewsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/birth_date"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_bg_design"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_blood" />

            <TextView
                android:id="@+id/bloodTypeTV"
                style="@style/textViewsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/blood_type"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/bloodTypes"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_down_arrow"

                android:saveEnabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_bg_design"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/lastDateIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/lastDateTV_register"
                style="@style/textViewsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/last_date_for_donation"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_bg_design"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_governate" />

            <TextView
                android:id="@+id/governorateTV_register"
                style="@style/textViewsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/governorate"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal" />

            <Spinner
                android:id="@+id/govervorateSpinner"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_down_arrow"
                android:dropDownWidth="match_parent" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_bg_design"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_governate" />

            <TextView
                android:id="@+id/countryTV_register"
                style="@style/textViewsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/country"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/countrySpinner"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_down_arrow" />
        </LinearLayout>


        <EditText
            android:id="@+id/phoneET_register"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/passwordET_register"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPasswordET_register"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerBtn_register"
            style="@style/buttonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bg_design"
            android:text="@string/register_btn" />

    </LinearLayout>

</ScrollView>